# statsify-overlay

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/settings/: colorpickerOLD.css
