[package]
name = "statsify-overlay"
version = "0.0.1"
description = "Statsify Overlay"
authors = ["imconnorngl, itzilly"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
lto = true
codegen-units = 1

[profile.dev]
debug = "full"
